--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,8 +4,14 @@
 body {
   height: 100vh;
   background-color: #FAFAFA;
+  font-family: 'Arimo', sans-serif;
+
 }
 .profile-pic {
   width: 100px;
   border-radius: 50px;
+}
+.liked {
+  width: 200px;
+  height: auto;
 }
