added profile pics to comments

--- a/src/assets/scss/components/registration-form.scss
+++ b/src/assets/scss/components/registration-form.scss
@@ -2,7 +2,17 @@
   width: 300px;
   background-color: white;
   border: 1px solid black;
-  margin-left: 60vw;
-  margin-top: 15vh;
+  margin:  800px auto 40px;
   padding: 10px;
+}
+#sign-up {
+  margin-top: 50vw;
+  margin-left: 50vw;
+}
+
+main {
+  height: 100%;
+  background-color: #FAFAFA;
+  font-family: 'Arimo', sans-serif;
+
 }
