--- a/src/assets/scss/components/login-form.scss
+++ b/src/assets/scss/components/login-form.scss
@@ -2,7 +2,6 @@
   width: 300px;
   background-color: white;
   border: 1px solid black;
-  margin-left: 60vw;
-  margin-top: 15vh;
+  margin:  50px auto;
   padding: 10px;
 }
