--- a/src/assets/scss/components/navbar.scss
+++ b/src/assets/scss/components/navbar.scss
@@ -1,6 +1,13 @@
 .navbar {
-&.is-transparent {
-background-color: transparent;
-background-image: none;
+  // &.is-transparent {
+  // background-color: transparent;
+  // background-image: none;
+  // }
+  background-color: #FFFFFF;
+  border-bottom: solid 1px #5BCDB3;
+  font-size: 20px;
 }
-}
+// .navbar-menu {
+//   border-bottom: #5BCDB3;
+//
+// }
