--- a/src/assets/scss/components/registration-form.scss
+++ b/src/assets/scss/components/registration-form.scss
@@ -5,25 +5,40 @@
   margin:  800px auto 40px;
   padding: 10px;
   padding-top: 80px;
+  font-family: "Nunito", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
 }
 #sign-up {
   margin-top: 50vh;
-  margin-left: 50vw;
+  margin-left: 47vw;
 }
 
 main {
   height: 100%;
   background-color: #FAFAFA;
-  font-family: 'Arimo', sans-serif;
-
+  font-family: "Nunito", sans-serif;
 }
 
 .add {
-  border-color: white;
-
+  border: 1px solid #5BCDB3;
 }
+
+
 .submit {
   margin-left: 16px;
   border-color: white;
-  color: #B93F8B
+  color: black;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+input {
+  font-family: "Nunito", sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.already-have-account {
+  text-align: center;
 }
