--- a/src/assets/scss/components/profile-page.scss
+++ b/src/assets/scss/components/profile-page.scss
@@ -4,6 +4,9 @@
 .liked {
   max-height: 130px;
 }
+.disliked {
+  max-height: 130px;
+}
 .sub {
     font-family: "Nunito", sans-serif;
     font-size: 15px;
