styling finished on index and reg

--- a/src/assets/scss/components/navbar.scss
+++ b/src/assets/scss/components/navbar.scss
@@ -1,13 +1,9 @@
 .navbar {
-  // &.is-transparent {
-  // background-color: transparent;
-  // background-image: none;
-  // }
+
   background-color: #FFFFFF;
   border-bottom: solid 1px #5BCDB3;
   font-size: 20px;
 }
-// .navbar-menu {
-//   border-bottom: #5BCDB3;
-//
-// }
+.logo {
+  height: 80px;
+}
