--- a/src/assets/scss/components/sidebar-menu.scss
+++ b/src/assets/scss/components/sidebar-menu.scss
@@ -1,5 +1,5 @@
 aside {
-  margin-top: 10px;
+  margin-top: 20px;
   width: 200px;
 }
 .is-sidebar-menu {
@@ -42,4 +42,8 @@ aside {
 .username-p {
   padding: 20px;
   float: right;
+}
+
+.hr {
+  background-color: #5BCDB3;
 }
