--- a/src/assets/scss/components/registration-form.scss
+++ b/src/assets/scss/components/registration-form.scss
@@ -30,8 +30,9 @@ main {
 
 .submit {
   margin-left: 16px;
-  border-color: white;
-  color: black;
+  background-color: #B93F8B;
+  color: white;
+  border: 1px solid #B93F8B;
   margin-top: 15px;
   margin-bottom: 15px;
 }
