changed blurb font

--- a/src/assets/scss/components/registration-form.scss
+++ b/src/assets/scss/components/registration-form.scss
@@ -61,12 +61,14 @@ input {
   margin-top: 10px;
   margin-bottom: 10px!important;
   font-size: 25px;
+  font-family: 'Playfair Display', serif;
 }
 
 .unsta-rev {
   margin-top: 30px;
   margin-bottom: 30px!important;
   font-size: 40px;
+  font-family: 'Playfair Display', serif;
 }
 
 
