--- a/src/assets/scss/components/login-form.scss
+++ b/src/assets/scss/components/login-form.scss
@@ -1,13 +1,23 @@
 div.login-form {
   width: 300px;
   color: white;
-  margin:  150px auto;
-  margin-left: 40vw;
   padding: 10px;
   z-index: 2!important;
   position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px; /* Negative half of height. */
+  margin-left: -150px;
 
 }
+
+.blackout {
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  z-index: 999;
+}
+
 
 .fullscreen-bg {
   width: 100vw;
@@ -20,6 +30,14 @@ div.login-form {
     overflow: hidden;
     z-index: 0;
 }
+
+@media only screen and (max-width: 1061px) {
+    .fullscreen-bg {
+        display: none;
+    }
+}
+
+
 
 .fullscreen-bg__video {
     position: absolute;
@@ -45,3 +63,9 @@ video {
   font-size: 25px;
   font-weight: bold;
 }
+
+// .navbar {
+//   visibility: hidden;
+//   background-color: black;
+//   z-index: -1;
+// }
