--- a/src/assets/scss/components/tv.scss
+++ b/src/assets/scss/components/tv.scss
@@ -1,18 +1,30 @@
-.tv {
+
+
+#ytplayer {
   display: block;
-  height: 100%;
+  height: 96.5%;
   left: 8%;
   position: absolute;
   top: 21%;
-  width: 100%;
+  width: 65%;
 }
-
 .tv-background {
   width: 100vw;
-  height: 100vh;
+  height: 110vh;
   background-image: url('http://pngimg.com/uploads/tv/tv_PNG39242.png');
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 10vh;
+}
 
+@media only screen and (max-width: 1061px) {
+    .tv-background {
+        display: none;
+    }
+    #ytplayer {
+      width: 100vw;
+      height: 100vh;
+      left: 0%;
+      top: 0%;
+    }
 }
