--- a/src/assets/scss/components/registration-form.scss
+++ b/src/assets/scss/components/registration-form.scss
@@ -10,8 +10,8 @@
   font-weight: bold;
 }
 .main-button {
-  margin-top: 5vh;
-  margin-left: 47vw;
+  display: block;
+  margin: 10px auto;
   background-color: #B93F8B;
   color: white;
   border: 1px solid #B93F8B;
@@ -67,7 +67,7 @@ input {
 .unsta-rev {
   margin-top: 30px;
   margin-bottom: 30px!important;
-  font-size: 40px;
+  font-size: 36px;
   font-family: 'Playfair Display', serif;
 }
 
