--- a/src/assets/scss/components/login-form.scss
+++ b/src/assets/scss/components/login-form.scss
@@ -1,15 +1,3 @@
-div.login-form {
-  width: 300px;
-  color: white;
-  padding: 10px;
-  z-index: 2!important;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -100px; /* Negative half of height. */
-  margin-left: -150px;
-
-}
 
 .blackout {
   width: 100vw;
@@ -30,8 +18,19 @@ div.login-form {
     overflow: hidden;
     z-index: 0;
 }
+.fullscreen-bg-main {
+  width: 100vw;
+  height: 100vh;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 0;
+}
 
-@media only screen and (max-width: 1061px) {
+@media only screen and (min-device-width: 768px) and (max-width: 1061px) and (-webkit-min-device-pixel-ratio: 1) {
     .fullscreen-bg {
         display: none;
     }
@@ -50,6 +49,17 @@ div.login-form {
 video {
   width: 100vw;
   height: 100vh;
+}
+div.login-form {
+  width: 300px;
+  color: white;
+  padding: 10px;
+  z-index: 2!important;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px; /* Negative half of height. */
+  margin-left: -150px;
 }
 
 .login-button {
