--- a/src/assets/scss/components/login-form.scss
+++ b/src/assets/scss/components/login-form.scss
@@ -18,17 +18,17 @@
   overflow: hidden;
   z-index: 0;
 }
-// .fullscreen-bg-main {
-//   width: 100vw;
-//   height: 100vh;
-//   position: fixed;
-//   right: 0;
-//   bottom: 0;
-//   top: 0;
-//   left: 0;
-//   overflow: hidden;
-//   z-index: 0;
-// }
+.fullscreen-bg-main {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 0;
+}
 
 @media only screen and (min-device-width: 768px) and (max-width: 1061px) and (-webkit-min-device-pixel-ratio: 1) {
     .fullscreen-bg {
